# licensing-prj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo_config.h  main.c
src/: base64_utils.c  licensing.c  licensing.cmake  mqtt_handler.c
src/include/: base64_utils.h  core_mqtt_config.h  licensing.h  licensing_mqtt_config.h  mqtt_handler.h
